Fix posts links color in dark mode

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -15,28 +15,20 @@
   line-height: 1.8;
  }
 
- .post blockquote > p {
+.post blockquote > p {
   padding-top: 0;
   padding-bottom: 0;
- }
+}
 
- .post a {
-  color: #000;
+.post a {
+  color: #1A202C;
   font-weight: bold;
   text-decoration: underline 3px #094cdc;
- }
+}
 
-.post-date-1 + .post-date-1 .post-label,
-.post-date-2 + .post-date-2 .post-label,
-.post-date-3 + .post-date-3 .post-label,
-.post-date-4 + .post-date-4 .post-label,
-.post-date-5 + .post-date-5 .post-label,
-.post-date-6 + .post-date-6 .post-label,
-.post-date-7 + .post-date-7 .post-label,
-.post-date-8 + .post-date-8 .post-label,
-.post-date-9 + .post-date-9 .post-label,
-.post-date-10 + .post-date-10 .post-label,
-.post-date-11 + .post-date-11 .post-label,
-.post-date-12 + .post-date-12 .post-label {
-  display: none;
+
+body.chakra-ui-dark .post a {
+  color: rgba(255, 255, 255, 0.92);
+  font-weight: bold;
+  text-decoration: underline 3px #094cdc;
 }
